# RepoShield

./: .gitignore  LICENSE  README.md  README.zh-CN.md  TEST_RUN_RESULT.txt  pyproject.toml
.reposhield/: audit.jsonl  gateway_approvals.jsonl  gateway_audit.jsonl
docs/: ADAPTER_GUIDE.zh-CN.md  AGENT_EXEC_GUARD_RECIPES.zh-CN.md  BENCH_GATEWAY_GUIDE.zh-CN.md  BENCH_REPORT_GUIDE.zh-CN.md  GATEWAY_GUIDE.zh-CN.md  POLICYGRAPH_RULEINDEX.zh-CN.md  POLICY_PACK_GUIDE.zh-CN.md  PROJECT_STATUS.zh-CN.md  README.zh-CN.md  REAL_AGENT_INTEGRATION.zh-CN.md  SANDBOX_GUIDE.zh-CN.md  SECOND_STAGE_USAGE.zh-CN.md  STUDIO_GUIDE.zh-CN.md  TEST_CASES.zh-CN.md  THIRD_STAGE_USAGE.zh-CN.md  TOOL_PARSER_PLUGIN_GUIDE.zh-CN.md  USAGE.zh-CN.md  demo_scripts.md  team_workflow.md
policies/: policy_pack_ci_cd.yaml  policy_pack_gateway.yaml  policy_pack_mcp.yaml  policy_pack_memory.yaml  policy_pack_secret_egress.yaml  policy_pack_supply_chain.yaml  policy_registry.yaml
reports/: stage2_aider_adapter_result.json  stage2_bench_suite_report.html  stage2_bench_suite_report.json  stage2_demo_incident.html  stage2_demo_result.json  stage3_audit_verify_result.json  stage3_gateway_bench_result.json  stage3_gateway_demo_result.json  stage3_gateway_incident.html  stage3_generate_samples_result.json  stage3_incident_report_result.json  stage3_studio.html  stage3_studio_result.json
tests/: test_action_policy.py  test_agent_trace_replay.py  test_approval_memory_mcp_audit.py  test_asset_context.py  test_control_plane_demo.py  test_control_plane_productization.py  test_openclaw_quickstart.py  test_studio_pro.py  (+4 more)
(+493 files in other folders)
